--- a/src/components/stateless/Navigation/style.css
+++ b/src/components/stateless/Navigation/style.css
@@ -1,39 +1,49 @@
-@import url('https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,600,700');
-@import url('https://fonts.googleapis.com/css?family=PT+Sans:400,700');
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700');
-
-.navbar-link {
-  font-size: 23.5px;
-  color: #3b3e42;
-  width: 100%;
-  font-family: sans-serif;
-}
-.navbar-item {
-  height: 64px;
-  display: flex;
-  align-self: center;
-}
-
-.navbar-logo {
-  width: 160.6px;
-  height: 64px;
-}
-
-.navbar-about {
-
-
-}
-
-.navbar-container {
-  display: grid;
-  margin-left: 13vw;
-  margin-right: 13vw;
-}
-
 .navbar {
   margin-top: 80px;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
+}
+
+.navbar-container {
+  display: flex;
+  margin-left: 13vw;
+  margin-right: 13vw;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.navbar-mr {
+  display: flex;
+  flex-direction: row;
+}
+
+.navbar-link {
+  font-size: 18px;
+  color: #3b3e42;
+  width: 100%;
+  font-family: sans-serif;
+  align-self: center;
+  text-align: center;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+.navbar-item {
+  height: 64px;
+  display: flex;
+}
+
+.navbar-logo {
+  width: 160.6px;
+  grid-column: 1/1;
+}
+
+.navbar-about {
+  margin-left: 0px !important
+}
+
+.navbar-contact {
+  margin-left: 0px !important
 }
