--- a/src/components/pages/Home/style.css
+++ b/src/components/pages/Home/style.css
@@ -6,7 +6,6 @@
   grid-template-columns: 544px 795px
 }
 
-
 .north-star-title {
   width: 100%;
   height: 16px;
@@ -45,4 +44,48 @@
 .home-landing-image {
   grid-column: 2/2;
   grid-row: 2/7;
+}
+
+.home-blue-section {
+  margin-left: 0px !important;
+  height: 600px;
+  width: 100%;
+  background-color: #008ed4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.home-blue-text {
+  width: 800px;
+  height: 122px;
+  font-family: sans-serif;
+  font-size: 34.6px;
+  line-height: 1.76;
+  color: #ffffff;
+  text-align: center;
+}
+
+.blue1 {
+  position: absolute;
+  top: 1000px;
+  left: -15px;
+}
+
+.blue2 {
+  position: absolute;
+  top: 663px;
+  right: 0px;
+}
+
+.HomeCards-container {
+  position: absolute;
+  height: 960px;
+  width: 100%;
+  background: #EEF1F6;
+  display: inline-grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 20px;
+  align-items: center;
+  justify-content: center;
 }
