--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,40 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,600');
+@import url('https://fonts.googleapis.com/css?family=Rubik:400,500');
+
 .uxsoc-website {
   margin-top: 30px;
   max-width: 100%;
   overflow: hidden !important;
+}
+
+h2 {
+  font-size: 40px;
+  font-family: "Rubik", sans-serif;
+  font-weight: 500;
+}
+
+.section-label {
+  color: #B3BCC4;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  letter-spacing: 5px;
+  text-transform: uppercase;
+}
+
+.blue-btn-big {
+  color: white;
+  font-size: 14px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  line-height: 19px;
+  text-align: center;
+  padding: 24px 32px;
+  background: #008ED4;
+  text-transform: uppercase;
+  cursor: pointer;
+  outline: none;
+  border-radius: 8px;
+  border: none;
+  display: block;
+  margin: auto;
 }
