--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,600');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,600');
 @import url('https://fonts.googleapis.com/css?family=Rubik:400,500');
 
 .uxsoc-website {
@@ -11,6 +11,7 @@ h2 {
   font-size: 40px;
   font-family: "Rubik", sans-serif;
   font-weight: 500;
+  text-align: center;
 }
 
 .section-label {
@@ -19,6 +20,7 @@ h2 {
   font-weight: 600;
   letter-spacing: 5px;
   text-transform: uppercase;
+  text-align: center;
 }
 
 .blue-btn-big {
