Fixed issue w/ HomeCard

--- a/src/components/pages/Home/style.css
+++ b/src/components/pages/Home/style.css
@@ -99,7 +99,7 @@
   height: auto;
   width: 100%;
   background: #FFFFFF;
-  padding-top: 4.5rem;
+  /* padding-top: 4.5rem; */
   display: inline-grid;
   grid-template-columns: 1fr;
 }
