improved reusability of ContactForm component

--- a/src/components/pages/Home/style.css
+++ b/src/components/pages/Home/style.css
@@ -24,6 +24,7 @@
   height: 153px;
   font-size: 64px;
   font-weight: 500;
+  font-family: "Rubik", sans-serif;
   color: #20252b;
   grid-column: 1/1;
   grid-row: 4/4;
