--- a/src/components/pages/Community/style.css
+++ b/src/components/pages/Community/style.css
@@ -16,6 +16,115 @@
   margin-top: -3rem;
 }
 
+.community-events-container {
+  height: 900px;
+  background: #EEF1F6;
+  padding-top: 1rem;
+}
+
+.community-events-container .section-label {
+  margin-top: 5.25rem;
+}
+
+.community-events-container h2 {
+  margin-top: -0.5rem;
+  margin-bottom: 2rem;
+}
+
+.event-card {
+  width: 52rem;
+  display: grid;
+  grid-template-columns: 27.5rem 25rem;
+  grid-template-rows: 32rem;
+  margin: auto;
+}
+
+.event-info {
+  height: 100%;
+  background: #FFFFFF;
+}
+
+.event-label {
+  color: #B3BCC4;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  text-align: left;
+  margin-top: 3rem;
+  margin-left: 2.5rem;
+}
+
+.event-name {
+  font-size: 2.25rem;
+  text-align: left;
+  margin-left: 2.4rem;
+}
+
+.event-details {
+  color: #20252B;
+  font-size: 12px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  line-height: 1.5rem;
+  list-style: none;
+  margin-left: -0.8rem;
+  margin-top: -1rem;
+  display: grid;
+  grid-template-columns: 1fr 9fr;
+}
+
+.event-details img {
+  margin-top: 0.35rem;
+  display: block;
+  margin: auto;
+}
+
+.about-header {
+  font-family: "Montserrat", sans-serif;
+  margin-left: 2.5rem;
+  margin-bottom: -0.3rem;
+}
+
+.about-desc {
+  width: 22.5rem;
+  font-family: "Montserrat", sans-serif;
+  font-size: 12px;
+  line-height: 21px;
+  margin-left: 2.5rem;
+  margin-bottom: 1.7rem;
+}
+
+.register-btn {
+  cursor: pointer;
+  margin-top: -0.7rem;
+}
+
+.register-btn a {
+  color: #008ED4;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  text-decoration: none;
+  text-transform: uppercase;
+  float: right;
+  margin-right: 4rem;
+  cursor: pointer;
+}
+
+
+.register-icon {
+  width: 14px;
+  height: 11px;
+  position: absolute;
+  right: 43.6rem;
+  margin-top: 0.25rem;
+}
+
+.event-img {
+  width: 100%;
+  height: 100%;
+}
+
 .round-btn {
   width: 3.375rem;
   height: 3.375rem;
