--- a/src/components/state/SectionToggle/style.css
+++ b/src/components/state/SectionToggle/style.css
@@ -1,5 +1,11 @@
-.SectionToggle {
+.SectionToggleEvents {
   width: 296px;
+  display: block;
+  margin: 1rem auto 4rem auto;
+}
+
+.SectionToggleResources {
+  width: 450px;
   display: block;
   margin: 1rem auto 4rem auto;
 }
@@ -8,7 +14,7 @@
   width: 148px;
   font-size: 1rem;
   font-family: "Montserrat", sans-serif;
-  font-weight: 500;
+  font-weight: 600;
   background: transparent;
   border: none;
   outline: none;
