--- a/src/components/pages/Community/style.css
+++ b/src/components/pages/Community/style.css
@@ -5,8 +5,6 @@
 
 .community-landing-container h2 {
   width: 30rem;
-  display: block;
-  margin: 1rem auto;
 }
 
 .community-landing-image {
@@ -14,34 +12,6 @@
   display: block;
   margin: auto;
   margin-top: -3rem;
-}
-
-.community-events-container {
-  height: 900px;
-  background: #EEF1F6;
-  padding-top: 1rem;
-}
-
-.community-events-container .section-label {
-  margin-top: 5.25rem;
-}
-
-.community-events-container h2 {
-  margin-top: -0.5rem;
-  margin-bottom: 2rem;
-}
-
-.event-card {
-  width: 52rem;
-  display: grid;
-  grid-template-columns: 27.5rem 25rem;
-  grid-template-rows: 32rem;
-  margin: auto;
-}
-
-.event-info {
-  height: 100%;
-  background: #FFFFFF;
 }
 
 .round-btn {
@@ -59,4 +29,52 @@
 
 .round-btn img {
   margin-top: 0.5rem;
+}
+
+/* events */
+.community-events-container {
+  height: 900px;
+  background: #EEF1F6;
+  padding-top: 1rem;
+}
+
+.community-events-container .section-label {
+  margin-top: 5.25rem;
+}
+
+.event-card {
+  width: 52rem;
+  display: grid;
+  grid-template-columns: 27.5rem 25rem;
+  grid-template-rows: 32rem;
+  margin: auto;
+}
+
+.event-info {
+  height: 100%;
+  background: #FFFFFF;
+}
+
+/* resources */
+.community-resources-container {
+  height: 1284px;
+  background: #EEF1F6;
+  padding-top: 0.5rem;
+}
+
+.community-resources-container h2 {
+  width: 40rem;
+}
+
+.resource-card {
+  z-index: 1;
+  width: 528px;
+  height: 408px;
+  background: #FFFFFF;
+  display: block;
+  margin: auto;
+  margin-top: 12rem;
+  margin-left: 38rem;
+  padding: 20px;
+  position: relative;
 }
