--- a/src/components/stateless/Resources/style.css
+++ b/src/components/stateless/Resources/style.css
@@ -10,31 +10,11 @@
   margin-left: 2.5rem;
 }
 
-.ResourceName {
-  font-size: 2.25rem;
+.ResourceTitle {
+  font-size: 2rem;
   text-align: left;
-  margin-left: -3.75rem;
-  margin-top: 2rem;
-}
-
-.AuthorPic {
-  width: 36px;
-  height: 36px;
-  border-radius: 50%;
-  background: #C4C4C4;
-  margin-left: 2.6rem;
-  margin-top: -1.25rem;
-  margin-bottom: 1.5rem;
-}
-
-.AuthorName {
-  color: #000000;
-  font-family: "Montserrat", sans-serif;
-  font-size: 1rem;
-  line-height: 28px;
-  margin-left: 2.7rem;
-  margin-bottom: 1.7rem;
-  margin-top: -3.5rem;
+  margin-left: 2.5rem;
+  margin-top: 1rem;
 }
 
 .ResourceDesc {
@@ -43,7 +23,7 @@
   font-family: "Montserrat", sans-serif;
   font-size: 1rem;
   line-height: 28px;
-  margin-left: 1.4rem;
+  margin-left: 2.5rem;
   margin-bottom: 1.7rem;
 }
 
@@ -70,5 +50,4 @@
   text-decoration: none;
   text-transform: uppercase;
   cursor: pointer;
-  text-align: center;
 }
