modified className for better consistency

--- a/src/components/state/ContactForm/style.css
+++ b/src/components/state/ContactForm/style.css
@@ -1,3 +1,11 @@
+.contact-container {
+  height: auto;
+  width: 100%;
+  background: #FFFFFF;
+  display: inline-grid;
+  grid-template-columns: 1fr;
+}
+
 .Contact {
   text-align: center;
 }
