--- a/src/components/state/SectionToggle/style.css
+++ b/src/components/state/SectionToggle/style.css
@@ -13,7 +13,7 @@
 .section-toggle {
   width: 148px;
   font-size: 1rem;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Proxima-Nova", sans-serif;
   font-weight: 600;
   background: transparent;
   border: none;
