--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,600');
 @import url('https://fonts.googleapis.com/css?family=Rubik:400,500');
 
 .uxsoc-website {
@@ -20,8 +19,9 @@ h2 {
 
 .section-label {
   color: #B3BCC4;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Proxima-Nova", sans-serif;
   font-weight: 600;
+  font-size: 1rem;
   letter-spacing: 5px;
   text-transform: uppercase;
   text-align: center;
@@ -30,7 +30,7 @@ h2 {
 .blue-btn-big {
   color: white;
   font-size: 14px;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Proxima-Nova", sans-serif;
   font-weight: 600;
   line-height: 19px;
   text-align: center;
