--- a/src/components/pages/Home/style.css
+++ b/src/components/pages/Home/style.css
@@ -9,7 +9,7 @@
 .north-star-title {
   width: 100%;
   height: 16px;
-  font-family: sans-serif;
+  font-family: "Proxima-Nova", sans-serif;
   font-size: 16px;
   font-weight: 600;
   text-transform: uppercase;
