--- a/src/components/state/RedirectButton/style.css
+++ b/src/components/state/RedirectButton/style.css
@@ -7,7 +7,7 @@
 
 .RedirectButton a {
   color: #008ED4;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Proxima-Nova", sans-serif;
   font-weight: 600;
   text-decoration: none;
   text-transform: uppercase;
