--- a/src/components/stateless/Author/style.css
+++ b/src/components/stateless/Author/style.css
@@ -10,7 +10,7 @@
 
 .AuthorName {
   color: #000000;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Proxima-Nova", sans-serif;
   font-size: 1rem;
   line-height: 28px;
   margin-left: 6rem;
