--- a/src/components/stateless/MemberStories/style.css
+++ b/src/components/stateless/MemberStories/style.css
@@ -6,7 +6,7 @@
 .MemberStoriesLabel {
   color: #B3BCC4;
   font-size: 1rem;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Proxima-Nova", sans-serif;
   font-weight: 500;
   letter-spacing: 2px;
   text-transform: uppercase;
