--- a/src/components/stateless/Navigation/style.css
+++ b/src/components/stateless/Navigation/style.css
@@ -23,7 +23,7 @@
   font-size: 18px;
   color: #3b3e42;
   width: 100%;
-  font-family: "Montserrat",sans-serif;
+  font-family: "Proxima-Nova",sans-serif;
   font-weight: 500;
   align-self: center;
   text-align: center;
