--- a/src/components/stateless/Events/style.css
+++ b/src/components/stateless/Events/style.css
@@ -2,7 +2,7 @@
   color: #20252B;
   font-size: 12px;
   font-family: "Proxima-Nova", sans-serif;
-  font-weight: 500;
+  font-weight: normal;
   line-height: 1.5rem;
   list-style: none;
   margin-left: 1.75rem;
@@ -45,6 +45,7 @@
   width: 22.5rem;
   font-family: "Proxima-Nova", sans-serif;
   font-size: 12px;
+  font-weight: lighter;
   line-height: 21px;
   margin-left: 2.5rem;
   margin-bottom: 1.7rem;
