updated font for home-blue-text to Proxima Nova

--- a/src/components/pages/Home/style.css
+++ b/src/components/pages/Home/style.css
@@ -68,7 +68,7 @@
 .home-blue-text {
   width: 800px;
   height: 122px;
-  font-family: sans-serif;
+  font-family: "Proxima-Nova", sans-serif;
   font-size: 34.6px;
   line-height: 1.76;
   color: #ffffff;
