--- a/src/components/stateless/Services/style.css
+++ b/src/components/stateless/Services/style.css
@@ -11,38 +11,14 @@ div{
 .services{
     text-align: center;
     position: relative;
-    height:900px;
+    height:300px;
     margin-top: 400px;
 }
 
-.firstRow{
-    position:relative;
-    left: -300px;
-    top: 100px;
 
-}
 
-.webDesign{
-    position: relative;
-    width: 36;
-    left: 250px;
-    font-size: 160%;
-    top: -210px;
-}
 
-.p1{
-    top: -200px;
-    left: 740px;
-    position: relative;
-    height: 108px;
-    width: 448px; 
-    text-align: justify;
-    line-height: 1.7;
-}
 
-.row1{
-    margin-top: -50px;
-}
 .prodRev{
     position: relative;
     font-size: 160%;
@@ -58,33 +34,61 @@ div{
 }
 
 .img2{
-    left: 800px;
+    left: 930px;
     position: relative; 
     top: -300px;
 }
 
 .row2{
     position: relative;
-    left: 200px;
-    margin-top: -120px;
-
+    left: 330px;
+    margin-top: -100px;
 }
 
 
+
+.row1{
+    position: relative;
+    top: -99px;
+    left: 130px;
+}
 .row3{
     position: relative;
-    top: -260px;
+    left: 130px;
+
+    top: -290px;
+}
+
+
+.img1{
+    position:relative;
+    left: 160px;
+
 }
 .img3{
     position: relative;
     left: 160px;
 }
 
+
+.webDesign{
+    position: relative;
+    font-size: 160%;
+    
+}
 .designWorkshops{
     position: relative;
     font-size: 160%;
 }
 
+
+
+.p1{
+    height: 108px;
+    width: 477px;
+    text-align: justify;
+    position: relative;
+}
 .p3{
     height: 108px;
     width: 477px;
@@ -92,6 +96,14 @@ div{
     position: relative;
 }
 
+.row1text{
+    top: -290px;
+    left: 740px;
+    position: relative;
+    height: 108px;
+    width: 448px; 
+
+}
 .row3text{
     top: -290px;
     left: 740px;
@@ -99,3 +111,4 @@ div{
     height: 108px;
     width: 448px; 
 }
+
