--- a/src/components/pages/Community/style.css
+++ b/src/components/pages/Community/style.css
@@ -108,9 +108,10 @@
 .resource-card {
   z-index: 1;
   width: 528px;
-  height: 408px;
+  height: 448px;
   background: #FFFFFF;
   box-shadow: 0 10px 20px rgba(48, 47, 47, 0.19), 0 6px 6px rgba(53, 52, 52, 0.23);
   grid-column: 9/9;
   grid-row: 3/8;
+  margin-top: -1rem;
 }
