--- a/src/components/pages/Community/style.css
+++ b/src/components/pages/Community/style.css
@@ -57,7 +57,7 @@
 
 /* member stories */
 .ms-container {
-  height: 1108px;
+  height: 1000px;
   background: #FFFFFF;
 }
 
@@ -85,6 +85,30 @@
 
 .ms-card .AuthorName {
   margin-bottom: 5rem;
+}
+
+/* opportuniies */
+.opportunities-container {
+  height: 1788px;
+  border: 2px solid red;
+}
+
+.opportunities-container h2 {
+  width: 37.5rem;
+}
+
+.opportunities-container img {
+  display: block;
+  margin: auto;
+}
+
+.opportunities-content-container {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(12, 1fr);
+  grid-row-gap: 84px;
+  border: 2px solid red;
+  margin-top: 1rem;
 }
 
 /* resources */
