--- a/src/components/pages/Community/style.css
+++ b/src/components/pages/Community/style.css
@@ -90,7 +90,6 @@
 /* opportuniies */
 .opportunities-container {
   height: 1788px;
-  border: 2px solid red;
 }
 
 .opportunities-container h2 {
@@ -107,8 +106,68 @@
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: repeat(12, 1fr);
   grid-row-gap: 84px;
-  border: 2px solid red;
   margin-top: 1rem;
+}
+
+.opportunity-position {
+  font-size: 28px;
+  font-family: "Rubik", sans-serif;
+  font-weight: 500;
+  color: black;
+  text-align: left;
+  line-height: 33px;
+  margin-left: 50px;
+  margin-top: 105px;
+}
+
+.opportunity-location {
+  margin-top: -1.25rem;
+  margin-bottom: 0.75rem;
+}
+
+.opportunity-location li {
+  font-family: "Proxima-Nova", sans-serif;
+  font-size: 12px;
+  margin-top: -1rem;
+  margin-left: 70px;
+  list-style-type: none;
+}
+
+.opportunity-location img {
+  position: relative;
+  left: -11rem;
+}
+
+.opportunity-type, .opportunity-experience {
+  font-family: "Proxima-Nova", sans-serif;
+  color: black;
+  font-size: 14px;
+  display: inline;
+  background: #C0EAFF;
+  border-radius: 18px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.opportunity-type {
+  padding-left: 32px;
+  padding-right: 32px;
+  margin-left: 50px;
+}
+
+.opportunity-experience {
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: 15px;
+}
+
+.opportunity-desc {
+  width: 366px;
+  font-family: "Proxima-Nova", sans-serif;
+  font-size: 14px;
+  line-height: 22px;
+  margin-left: 50px;
+  margin-top: 28px;
 }
 
 /* resources */
