--- a/src/components/stateless/Opportunities/style.css
+++ b/src/components/stateless/Opportunities/style.css
@@ -1,7 +1,9 @@
 .OpportunityCard {
   width: 468px;
-  height: 410px;
+  height: 340px;
+  /* padding: 50px 42px 120px 60px; */
   box-shadow: 0 10px 20px rgba(48, 47, 47, 0.19), 0 6px 6px rgba(53, 52, 52, 0.23);
+  border-bottom: 70px solid #F1F5FA;
 }
 
 .OpportunityCard:first-of-type {
