--- a/src/components/pages/Home/style.css
+++ b/src/components/pages/Home/style.css
@@ -84,9 +84,117 @@
   justify-content: center;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 768px) {
+  .north-star-title {
+    margin-left: -3.5rem;
+  }
+
+  .main-title-leader {
+    font-size: 60px;
+    margin-top: 1rem;
+    margin-left: -3.5rem;
+  }
+
+  .journey-button {
+    margin-left: -3.5rem;
+  }
+
+  .home-blue-text {
+    font-size: 34px;
+    margin-top: -1rem;
+  }
+
+  .blue1 {
+    display: none;
+  }
+
+  .blue2 {
+    position: absolute;
+    top: 400px;
+    right: 0px;
+  }
+
+  .HomeCard-container {
+    position: relative;
+    z-index: 1;
+    height: 800px;
+    width: 100%;
+    background: #EEF1F6;
+    display: inline-grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 20px;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .main-title-leader {
+    font-size: 45px;
+    margin-top: 1rem;
+    margin-left: -2.5rem;
+  }
+
+  .north-star-title {
+    margin-left: -2.5rem;
+  }
+
+  .journey-button {
+    margin-top: -5rem;
+    margin-left: -2.5rem;
+  }
+
+  .home-blue-text {
+    width: 450px;
+    font-size: 28px;
+    margin-top: -5rem;
+  }
+
+  .HomeCard-container {
+    position: relative;
+    z-index: 1;
+    height: auto;
+    background: #EEF1F6;
+    display: inline-grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 675px 675px;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+    justify-items: center;
+    justify-content: center;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .main-title-leader, .north-star-title, .journey-button {
+    margin-left: -2rem;
+  }
+
+  .blue2 {
+    position: absolute;
+    top: 480px;
+    right: 0px;
+  }
+
+  .home-blue-text {
+    width: 370px;
+    font-size: 24px;
+    margin-top: -5rem;
+  }
+
+  .HomeCard-container {
+    height: auto;
+    grid-template-columns: 100%;
+    grid-template-rows: 650px 650px;
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+  }
+}
+
+@media screen and (max-width: 375px) {
   .north-star-title {
     margin-top: -0.5rem;
+    margin-left: -0.5rem;
   }
 
   .main-title-leader {
@@ -95,6 +203,40 @@
     font-size: 34px;
     line-height: normal;
     margin-top: -1rem;
+  }
+
+  .main-title-leader, .north-star-title, .journey-button {
+    margin-left: -1.5rem;
+  }
+
+  .journey-button {
+    margin-top: -10rem;
+  }
+
+  .home-blue-section {
+    height: 500px;
+  }
+
+  .home-blue-text {
+    width: 350px;
+    font-size: 20px;
+    margin-top: -3rem;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .north-star-title {
+    margin-top: -0.5rem;
+    margin-left: -0.5rem;
+  }
+
+  .main-title-leader {
+    width: 258px;
+    height: 82px;
+    font-size: 34px;
+    line-height: normal;
+    margin-top: -1rem;
+    margin-left: -0.5rem;
   }
 
   .home-landing-image {
@@ -113,7 +255,6 @@
 
   .journey-button {
     z-index: 99;
-    border: 2px solid red;
     margin-top: 35rem;
   }
 
@@ -147,6 +288,7 @@
     line-height: 33px;
     color: #ffffff;
     text-align: left;
+    margin-top: 1rem;
   }
 
   .HomeCard-container {
@@ -162,5 +304,4 @@
     justify-content: center;
     padding-top: 10rem;
   }
-
 }
