--- a/src/components/state/Navigation/style.css
+++ b/src/components/state/Navigation/style.css
@@ -1,9 +1,12 @@
 .navbar {
-  margin-top: 30px;
+  z-index: 99;
   top: 0;
   left: 0;
   width: 100%;
   margin-bottom: 42px;
+  position: fixed;
+  background: white;
+  padding-top: 1rem;
 }
 
 .navbar-container {
@@ -19,7 +22,7 @@
   flex-direction: row;
 }
 
-.navbar-link {
+.navbar-link, .dropdown-link {
   font-size: 18px;
   color: #3b3e42;
   width: 100%;
@@ -58,6 +61,28 @@
 
 .navbar-contact {
   margin-left: 0px !important
+}
+
+.NavDropdown {
+  z-index: 99;
+  width: 100vw;
+  height: auto;
+  color: white;
+  background: #008ed4;
+  position: fixed;
+  top: 6rem;
+  /* opacity: 0.9; */
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.NavDropdown li {
+  list-style: none;
+  color: white;
+  padding: 0.5rem;
+}
+
+.NavDropdown li:hover {
+  background: #006ca1;
 }
 
 @media screen and (max-width: 768px) {
@@ -125,7 +150,6 @@
 @media screen and (max-width: 320px) {
   .navbar {
     margin-top: 0px;
-    margin-left: 0.75rem;
     width: 100%;
     margin-bottom: -25px;
   }
@@ -140,6 +164,6 @@
   }
 
   .navbar-menu {
-    margin-right: -5.5rem;
+    margin-right: -8.5rem;
   }
 }
