--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,8 @@ h2 {
   border: none;
   display: block;
   margin: auto;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .journey-button {
@@ -64,7 +65,8 @@ h2 {
   outline: none;
   cursor: pointer;
   line-height: 70px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 @media screen and (max-width: 320px) {
