opportunities(feat): add apply now button

--- a/src/components/stateless/Opportunities/style.css
+++ b/src/components/stateless/Opportunities/style.css
@@ -30,3 +30,12 @@
   margin-top: 3rem;
   margin-left: 3rem;
 }
+
+.OpportunityCard .RedirectButton {
+  margin-top: 5rem;
+  margin-right: 4.25rem;
+}
+
+.OpportunityCard .RedirectButton img {
+  margin-top: 0.3rem;
+}
