--- a/src/components/stateless/Resources/style.css
+++ b/src/components/stateless/Resources/style.css
@@ -1,3 +1,20 @@
+.resource-content-container {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(12, 1fr);
+}
+
+.resource-card {
+  z-index: 1;
+  width: 528px;
+  height: 448px;
+  background: #FFFFFF;
+  box-shadow: 0 10px 20px rgba(48, 47, 47, 0.19), 0 6px 6px rgba(53, 52, 52, 0.23);
+  grid-column: 9/9;
+  grid-row: 3/8;
+  margin-top: -1rem;
+}
+
 .ResourceLabel {
   color: #B3BCC4;
   font-size: 1rem;
