--- a/src/components/stateless/Resources/style.css
+++ b/src/components/stateless/Resources/style.css
@@ -4,6 +4,10 @@
   grid-template-rows: repeat(12, 1fr);
 }
 
+.main-title {
+  width: 40rem;
+}
+
 .resource-card {
   z-index: 1;
   width: 528px;
@@ -12,7 +16,8 @@
   box-shadow: 0 10px 20px rgba(48, 47, 47, 0.19), 0 6px 6px rgba(53, 52, 52, 0.23);
   grid-column: 9/9;
   grid-row: 3/8;
-  margin-top: -1rem;
+  margin-top: -2rem;
+  margin-right: -3rem;
 }
 
 .ResourceLabel {
@@ -30,6 +35,7 @@
 .ResourceTitle {
   font-size: 2rem;
   text-align: left;
+  width: 30rem;
   margin-left: 2.5rem;
   margin-top: 1rem;
 }
@@ -51,6 +57,7 @@
 .ResourceImage {
   grid-column: 4/9;
   grid-row: 1/12;
+  margin-left: -3rem;
 }
 
 .PastResources {
