--- a/src/App.css
+++ b/src/App.css
@@ -70,6 +70,10 @@ h2 {
 }
 
 @media screen and (max-width: 320px) {
+  h2 {
+    font-size: 24px;
+  }
+
   .journey-button {
     width: 248px;
     grid-column: 1/1;
