--- a/src/components/pages/Community/style.css
+++ b/src/components/pages/Community/style.css
@@ -216,3 +216,36 @@
   color: #20252b;
   border-bottom: 1px solid #20252b;
 }
+
+@media screen and (max-width: 320px) {
+  .landing-container h2 {
+    width: 288px;
+    line-height: normal;
+    margin-bottom: 6rem;
+  }
+
+  .round-btn {
+    width: 30px;
+    height: 30px;
+    margin-top: 3rem;
+  }
+
+  .round-btn img {
+    width: 16px;
+    height: 9px;
+  }
+
+  .events-container {
+    height: 1100px;
+    background: #EEF1F6;
+    padding-top: 1rem;
+  }
+
+  .event-card {
+    width: 270px;
+    display: grid;
+    grid-template-columns: 270px;
+    grid-template-rows: 745px;
+    margin: auto;
+  }
+}
