--- a/src/components/pages/Community/style.css
+++ b/src/components/pages/Community/style.css
@@ -248,4 +248,9 @@
     grid-template-rows: 745px;
     margin: auto;
   }
+
+  .ms-container h2 {
+    width: 258px;
+    line-height: 34px;
+  }
 }
