--- a/src/components/stateless/MemberStories/style.css
+++ b/src/components/stateless/MemberStories/style.css
@@ -1,3 +1,34 @@
+.ms-container {
+  height: 1000px;
+  background: #FFFFFF;
+}
+
+.ms-container h2 {
+  width: 38rem;
+}
+
+.ms-content-container {
+  margin-top: 3rem;
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  grid-template-rows: repeat(8, 1fr);
+}
+
+.ms-card {
+  z-index: 1;
+  width: 568px;
+  height: 448px;
+  background: #FFFFFF;
+  box-shadow: 0 10px 20px rgba(48, 47, 47, 0.19), 0 6px 6px rgba(53, 52, 52, 0.23);
+  margin-top: 2rem;
+  grid-column: 6/10;
+  grid-row: 2/8;
+}
+
+.ms-card .AuthorName {
+  margin-bottom: 5rem;
+}
+
 .MemberStoriesImage {
   grid-column: 2/9;
   grid-row: 1/8;
@@ -22,4 +53,58 @@
   margin-left: 2.5rem;
   margin-top: 2rem;
   margin-bottom: 3rem;
+}
+
+@media screen and (max-width: 320px) {
+  .ms-container {
+    height: 400px;
+    margin-top: -4rem;
+    margin-bottom: 15rem;
+  }
+
+  .ms-image {
+    width: 270px;
+    height: 186px;
+    margin-top: -0.5rem;
+    margin-left: -0.4rem;
+  }
+
+  .ms-card {
+    height: 16rem;
+    margin-top: 6rem;
+    grid-column: 1/10;
+    grid-row: 2/8;
+    box-shadow: 0 4px rgba(207, 204, 204, 0.23);
+  }
+
+  .MemberStoriesLabel {
+    font-size: 12px;
+    margin-top: 1rem;
+    margin-left: 1.7rem;
+  }
+
+  .MemberStoriesTitle {
+    font-size: 18px;
+    line-height: 26px;
+    width: 1rem;
+    margin-left: 1.7rem;
+    margin-top: -0.5rem;
+    margin-bottom: 3rem;
+  }
+
+  .ms-card .AuthorPic {
+    margin-left: 1.7rem;
+  }
+
+  .ms-card .AuthorName {
+    font-size: 12px;
+    margin-bottom: 2.75rem;
+    margin-left: 4.5rem;
+  }
+
+  .RedirectButton a {
+    float: left;
+    /* margin-top: -3.5rem; */
+    margin-left: 4.5rem;
+  }
 }
